# pynary

./: README.md  pyproject.toml
examples/: simple.py
src/pynary/: __init__.py
